syntax = "proto3";

package crudPackage;

service CrudService {
  rpc CreateMember (Member) returns (Response);
  rpc GetMember (MemberId) returns (Member);
  rpc UpdateMember (Member) returns (Response);
  rpc DeleteMember (MemberId) returns (Response);
}

message Member {
  int32 id = 1;
  string name = 2;
  string email = 3;
}

message MemberId {
  int32 id = 1;
}

message Response {
  bool success = 1;
  string message = 2;
}